--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -91,6 +91,7 @@ body {
 .button:hover {
   background-color: #6c8cff;
 }
+
 .gallery {
   display: flex;
   align-items: center;
@@ -122,42 +123,41 @@ body {
 
 /* STYLES LOADER */
 
-.loader {
-  position: relative;
-  width: 55px;
-  height: 55px;
-  background-repeat: no-repeat;
-  background-image: linear-gradient(#fff 50px, transparent 0),
-    linear-gradient(#fff 50px, transparent 0),
-    linear-gradient(#fff 50px, transparent 0),
-    linear-gradient(#fff 50px, transparent 0),
-    linear-gradient(#fff 50px, transparent 0),
-    linear-gradient(#fff 50px, transparent 0);
-  background-size: 5px 40px;
-  background-position: 0px center, 10px center, 20px center, 30px center,
-    40px center, 50px center;
-  animation: spikeUp 1s linear infinite alternate;
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
-@keyframes spikeUp {
-  0% {
-    background-size: 5px 40px;
-  }
-  16% {
-    background-size: 5px 55px, 5px 40px, 5px 40px, 5px 40px, 5px 40px, 5px 40px;
-  }
+
+.loader-div {
+  display: flex;
+  justify-content: center;
+}
+
+.loader {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  display: block;
+  margin: 15px auto;
+  position: relative;
+  background: #f70303;
+  box-shadow: -24px 0 #fff, 24px 0 #fff;
+  box-sizing: border-box;
+  animation: shadowPulse 2s linear infinite;
+}
+
+@keyframes shadowPulse {
   33% {
-    background-size: 5px 40px, 5px 55px, 5px 40px, 5px 40px, 5px 40px, 5px 40px;
-  }
-  50% {
-    background-size: 5px 40px, 5px 40px, 5px 55px, 5px 40px, 5px 40px, 5px 40px;
+    background: #fff;
+    box-shadow: -24px 0 #ff3d00, 24px 0 #fff;
   }
   66% {
-    background-size: 5px 40px, 5px 40px, 5px 40px, 5px 55px, 5px 40px, 5px 40px;
-  }
-  83% {
-    background-size: 5px 40px, 5px 40px, 5px 40px, 5px 40px, 5px 55px, 5px 40px;
+    background: #ff3d00;
+    box-shadow: -24px 0 #fff, 24px 0 #fff;
   }
   100% {
-    background-size: 5px 40px, 5px 40px, 5px 40px, 5px 40px, 5px 40px, 5px 55px;
+    background: #fff;
+    box-shadow: -24px 0 #fff, 24px 0 #ff3d00;
   }
 }
