--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -123,12 +123,6 @@ body {
 
 /* STYLES LOADER */
 
-.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
 .loader-div {
   display: flex;
   justify-content: center;
@@ -141,15 +135,15 @@ body {
   display: block;
   margin: 15px auto;
   position: relative;
-  background: #f70303;
-  box-shadow: -24px 0 #fff, 24px 0 #fff;
+  background: #fd0101;
+  box-shadow: -24px 0 #fd0101, 24px 0 #fd0101;
   box-sizing: border-box;
-  animation: shadowPulse 4s linear infinite;
+  animation: shadowPulse 2s linear infinite;
 }
 
 @keyframes shadowPulse {
   33% {
-    background: #fff;
+    background: #fd0101;
     box-shadow: -24px 0 #ff3d00, 24px 0 #fff;
   }
   66% {
@@ -157,7 +151,7 @@ body {
     box-shadow: -24px 0 #fff, 24px 0 #fff;
   }
   100% {
-    background: #fff;
+    background: #fd0101;
     box-shadow: -24px 0 #fff, 24px 0 #ff3d00;
   }
 }
